--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "i18n-js": "^3.8.0",
     "react": "17.0.2",
     "react-native": "0.66.2",
+    "react-native-config": "^1.4.5",
     "react-native-localize": "^2.1.5",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
