--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.66.2",
     "react-native-config": "^1.4.5",
     "react-native-localize": "^2.1.5",
+    "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.10.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
