--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@types/react-redux": "^7.1.20",
     "apisauce": "^2.1.2",
     "i18n-js": "^3.8.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.2",
     "react-native-config": "^1.4.5",
     "react-native-localize": "^2.1.5",
     "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.10.0",
+    "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^9.0.0",
@@ -35,8 +37,11 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/i18n-js": "^3.8.2",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.176",
     "@types/react-native": "^0.65.0",
+    "@types/react-native-restart": "^0.0.14",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-module-resolver": "^4.1.0",
